--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,3 +37,129 @@ a {
   border-color: rgb(73, 252, 177);
   color: rgb(70, 253, 146);
 } 
+
+.form-style-0 input[type="radio"]{
+  opacity: 0.7;
+}
+.form-style-0{
+  font-family: 'Open Sans Condensed', arial, sans;
+  width: 500px;
+  padding: 30px;
+  background: #FFFFFF;
+  margin: 50px auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+
+}
+.form-style-0 h2{
+  background: #414057;
+  text-transform: uppercase;
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #9c9c9c;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 20px;
+  margin: -30px -30px 30px -30px;
+}
+.form-style-0 h3{
+  width: 98%;
+  text-transform: uppercase;
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #9c9c9c;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 10px;
+  margin: -5px 5px -18px 0px;
+}
+.form-style-0 h4{
+  width: 98%;
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #9c9c9c;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 10px;
+  margin: -5px -5px -18px 0px;
+}
+.form-style-0 select{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
+}
+.form-style-0 input[type="text"],
+.form-style-1 input[type="text"],
+.form-style-0 input[type="date"],
+.form-style-0 input[type="datetime"],
+.form-style-0 input[type="email"],
+.form-style-0 input[type="number"],
+.form-style-0 input[type="search"],
+.form-style-0 input[type="time"],
+.form-style-0 input[type="url"],
+.form-style-0 input[type="password"],
+.form-style-0 textarea,
+.form-style-1 textarea{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
+}
+.form-style-0 textarea{
+  resize:none;
+  overflow: hidden;
+}
+.form-style-0 input[type="button"],
+.form-style-0 input[type="submit"]{
+  margin-left: 25%;
+  -moz-box-shadow: inset 0px 1px 0px 0px #7095d6;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #7180d6;
+  box-shadow: inset 0px 1px 0px 0px #717ed6;
+  background-color: #4d66bb;
+  border: 1px solid #383fa0;
+  display: inline-block;
+  cursor: pointer;
+  color: #FFFFFF;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 14px;
+  padding: 8px 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.form-style-0 input[type="button"]:hover,
+.form-style-0 input[type="submit"]:hover{
+  background:linear-gradient(to bottom, #717ed6 5%, #383fa0 100%);
+  background-color: #7095d6;
+}
+.form-style-0 input[type="button"]:active,
+.form-style-0 input[type="submit"]:active{
+  background:linear-gradient(to bottom, #383fa0 5%, #3c8bc9 100%);
+  background-color: #438cca;
+}
+
+.local{
+  background: #414057;
+  text-transform: uppercase;
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #9c9c9c;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 5px;
+
+}
